# PyJEM_Service

./: .bumpversion.toml  .gitignore  README.md  pyproject.toml  requirements.txt
pyjem_service/: __init__.py  __main__.py
